# J.A.R.V.I.S

./: .env.example  README.md  pyproject.toml
agentic_trading_bot/: __init__.py  config.py  main.py  models.py
agentic_trading_bot/agents/: research.py  risk.py
agentic_trading_bot/brokers/: paper.py
agentic_trading_bot/data/: providers.py
agentic_trading_bot/execution/: engine.py
agentic_trading_bot/strategies/: core.py
docs/: agentic-trading-bot-blueprint.md  implementation-setup-guide.md
tests/: test_paper_broker.py  test_risk_agent.py
