[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-trading-bot"
version = "0.1.0"
description = "Starter implementation of an agentic trading bot for stocks and crypto"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_trading_bot*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0"
]
